--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,1 +1,7 @@
-<app-product-item *ngFor="let pd of products" [product]="pd"></app-product-item>
+<div>
+  <h2>Product List</h2>
+  <app-product-item
+    *ngFor="let pd of products"
+    [product]="pd"
+  ></app-product-item>
+</div>
