Finish Part2 Lab3 Add EventEmitter

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -3,5 +3,6 @@
   <app-product-item
     *ngFor="let pd of products"
     [product]="pd"
+    (OnSelected)="selectedProduct($event)"
   ></app-product-item>
 </div>
