--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div>
+  <app-navbar></app-navbar>
+  <app-main-content> </app-main-content>
   <h2>Product List</h2>
   <app-product-list #productList></app-product-list>
 </div>
